# budget_dcc

./: README.md
firmware/: booster_wiring.txt
firmware/src/: cs.c  i2c_lib.c  loop_pico_w.c  tcp_server.c
flutter_android_app/: code.dart  main.dart  my_button.dart  pubspec.yaml  source.dart  tcp_controller.dart
ili9341/: CMakeLists.txt  ili9341.c  ili9341.h  ili9341_test.c
